[package]
name = "drs-rt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drs-rt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fern = "0.6"
log = "0.4"
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
core_affinity = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
